tests/types/errors/fetch_opts_map.mochi
let x = fetch "https://example.com" with 10
